Related: tdf#108655 only write to config if values changed

Change-Id: I6ba001745638dc2b8ce091d717915e334ece4b04
Reviewed-on: https://gerrit.libreoffice.org/40623
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>